# xetla

./: .gitignore  .gitmodules  BuildAndRunBenchmark.md  CMakeLists.txt  CODEOWNERS  Doxyfile  How_To_Build_And_Run_Benchmark.md  README.md  gemm_benchmark_bf16_bf16_float_float.sh  gemm_softmax_bf16_bf16_float_float.sh
.github/workflows/: clang-format-check.yml  fake_dpcpp_regression.yml
ci_docker/: Dockerfile  clang_format_check.sh
docs/: 01__basic__gemm_2CMakeLists_8txt.html  01__gemm__universal_2CMakeLists_8txt.html  02__basic__brgemm_2CMakeLists_8txt.html  02__basic__gemm_2CMakeLists_8txt.html  03__gemm__relu__bias_2CMakeLists_8txt.html  04__brgemm__polynomial_2CMakeLists_8txt.html  04__gemm__polynomial_2CMakeLists_8txt.html  05__batch__gemm_2CMakeLists_8txt.html  06__gemm__softmax_2CMakeLists_8txt.html  06__splitk__brgemm_2CMakeLists_8txt.html  07__gemm__softmax_2CMakeLists_8txt.html  07__multi__layer__perceptron_2CMakeLists_8txt.html  08__multi__layer__perceptron_2CMakeLists_8txt.html  08__scaled__dot__product__attention_2CMakeLists_8txt.html  09__gate__recurrent__unit_2CMakeLists_8txt.html  09__multi__head__attention_2CMakeLists_8txt.html  09__scaled__dot__product__attention_2CMakeLists_8txt.html  09__scaled__dot__production__attention_2CMakeLists_8txt.html  10__gate__recurrent__unit_2CMakeLists_8txt.html  10__gemm__large__n_2CMakeLists_8txt.html  11__streamK__gemm_2CMakeLists_8txt.html  11__stream__k__gemm_2CMakeLists_8txt.html  CMakeLists_8txt.html  README_8md.html  annotated.html  annotated_dup.js  arch__config_8hpp.html  arch__config_8hpp.js  arch__config_8hpp__dep__incl.dot  arch__config_8hpp__dep__incl.map  arch__config_8hpp__dep__incl.md5  arch__config_8hpp__incl.dot  arch__config_8hpp__incl.map  arch__config_8hpp__incl.md5  arch__config_8hpp_source.html  barrier_8hpp.html  barrier_8hpp.js  barrier_8hpp__dep__incl.dot  barrier_8hpp__dep__incl.map  barrier_8hpp__dep__incl.md5  (+4191 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  (+185 more)
examples/: CMakeLists.txt
examples/06_gemm_softmax/: CMakeLists.txt  gemm_softmax.cpp
hooks/: How_to_setup.md  clang-fomat.hook
include/: xetla.hpp
pre_si_tests/: cobalt_pytest.sh  conftest.py  set_up_pre_si_test.sh
tools/: .gitignore  perf.py
(+189 files in other folders)
